--- a/app/src/main/res/layout/cambiar_contra_especialista.xml
+++ b/app/src/main/res/layout/cambiar_contra_especialista.xml
@@ -47,9 +47,9 @@
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/contrase_a_actual"
-            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_marginStart="30dp"
             />
         <com.google.android.material.textfield.TextInputLayout
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
+            app:startIconDrawable="@drawable/ic_pass"
             app:endIconMode="password_toggle">
 
             <EditText
@@ -65,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/inserte_su_contrase_a_actual"
-                android:paddingStart="10dp"
+                android:paddingStart="45dp"
                 android:inputType="textPassword"
                 android:background="@drawable/image_rectangle1"
                 />
@@ -80,9 +81,9 @@
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/contrase_a_nueva"
-            android:textStyle="bold"
             android:textColor="#FF000000"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_marginStart="30dp"
             />
 
@@ -92,6 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
+            app:startIconDrawable="@drawable/ic_pass"
             app:endIconMode="password_toggle">
 
             <EditText
@@ -99,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/inserte_su_nueva_contrase_a"
-                android:paddingStart="10dp"
+                android:paddingStart="45dp"
                 android:inputType="textPassword"
                 android:background="@drawable/image_rectangle1"
                 />
@@ -114,9 +116,9 @@
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/confirmar_contrase_a"
-            android:textStyle="bold"
             android:textColor="#FF000000"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_marginStart="30dp"
             />
 
@@ -126,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
+            app:startIconDrawable="@drawable/ic_pass"
             app:endIconMode="password_toggle">
 
             <EditText
@@ -133,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/confirme_su_nueva_contrase_a"
-                android:paddingStart="10dp"
+                android:paddingStart="45dp"
                 android:inputType="textPassword"
                 android:background="@drawable/image_rectangle1"
                 />
