--- a/app/src/main/res/layout/registro_especialista.xml
+++ b/app/src/main/res/layout/registro_especialista.xml
@@ -43,7 +43,7 @@
                 android:layout_height="130dp"
                 android:layout_marginTop="20dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/image_perfil"
+                android:background="@drawable/imagen_login"
                 android:scaleType="fitXY"
                 app:shapeAppearanceOverlay="@style/radius4"/>
 
