Implementacion de botones para retrodecer y loader para el registro

--- a/app/src/main/res/layout/cambiar_contra_especialista.xml
+++ b/app/src/main/res/layout/cambiar_contra_especialista.xml
@@ -27,7 +27,7 @@
         android:layout_gravity="top"
         android:background="@drawable/ic_flechavolver"
         android:scaleType="centerInside"
-        android:onClick="volverMenu"
+        android:onClick="backMenu"
         />
 
     <LinearLayout
