--- a/app/src/main/res/layout/login_especialista.xml
+++ b/app/src/main/res/layout/login_especialista.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/ic_flechavolver"
-        android:onClick="ReturnRegisterUser"
+        android:onClick="backMenu"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
