--- a/app/src/main/res/layout/registro_especialista.xml
+++ b/app/src/main/res/layout/registro_especialista.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="top"
         android:background="@drawable/ic_flechavolver"
         android:scaleType="centerInside"
-        android:onClick="ReturnRegisterUser"
+        android:onClick="backMenu"
         />
 
     <ScrollView
@@ -335,6 +335,13 @@
                     android:textSize="20sp"
                     android:layout_marginBottom="40dp"
                     android:onClick="openHome"/>
+
+                <ProgressBar
+                    android:id="@+id/loader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
