--- a/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:text="@string/titulo_detalle_servicio_especialista"
         android:textSize="30sp"
         android:textColor="@color/white"
