--- a/app/src/main/res/layout/registro_cliente.xml
+++ b/app/src/main/res/layout/registro_cliente.xml
@@ -138,8 +138,9 @@
                         android:id="@+id/edRut_cliente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="10dp"
+                        android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
+                        android:hint="@string/ej_123456789"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -162,13 +163,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    app:startIconDrawable="@drawable/ic_email">
+
+                    app:startIconDrawable="@drawable/ic_email"
+                    android:hint="@string/correo_ejemplo_com">
 
                     <EditText
                         android:id="@+id/edCorreo_cliente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="10dp"
+                        android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -193,13 +196,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="center"
-                    app:startIconDrawable="@drawable/ic_phone2">
+                    app:startIconDrawable="@drawable/ic_phone2"
+                    android:hint="@string/ej_912345678">
 
                     <EditText
                         android:id="@+id/edTelefono_cliente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="10dp"
+                        android:paddingStart="40dp"
                         android:background="@drawable/image_rectangle1"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
